Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
/sys/kernel/debug/dri/0/i915_rps_boost_info info is wrong/unpopulated when using GuC
On an Alderlake system, with i915.enable_guc=3
, /sys/kernel/debug/dri/0/i915_rps_boost_info
is mostly wrong and unpopulated:
RPS enabled? no
RPS active? no
GPU busy? no
Boosts outstanding? 129
Interactive? 0
Frequency requested 0, actual 650
min hard:0, soft:0; max soft:0, hard:0
idle:0, efficient:0, boost:0
Wait boosts: 0
With i915.enable_guc=2
it contains useful information:
RPS enabled? yes
RPS active? no
GPU busy? no
Boosts outstanding? 0
Interactive? 0
Frequency requested 800, actual 100
min hard:100, soft:100; max soft:1100, hard:1100
idle:100, efficient:600, boost:1100
Wait boosts: 41